# simple-engine

./: .gitignore  CMakeLists.txt  README.md
include/core/: parser.h  parser_alter_table.h  parser_create_table.h  parser_delete.h  parser_drop_table.h  parser_insert.h  parser_select.h  parser_update.h
src/: main.cpp
src/core/: parser.cpp  parser_alter_table.cpp  parser_create_table.cpp  parser_delete.cpp  parser_drop_table.cpp  parser_insert.cpp  parser_select.cpp  parser_update.cpp
